# PureArt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  backend.py  frontend.py  pyproject.toml  requirements.txt  styles.tcss
src/: frontend.py  styles.tcss
src/pureart/: __init__.py  __main__.py  backend.py  frontend.py  styles.tcss
